<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="13dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            android:id="@+id/txtCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:fontFamily="@font/montserrat"
            android:text="@string/code"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/txtCredits"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/txtCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/_0"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:alpha="0.8"
            android:fontFamily="@font/montserrat"
            android:text="@string/title"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCode" />

        <View
            android:id="@+id/viewDivider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/Description"
            app:layout_constraintEnd_toStartOf="@id/btnExpand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivider1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnExpand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_keyboard_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@id/txtDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtDescription"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/viewDivider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescription" />

        <TextView
            android:id="@+id/txtPreRequisites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/pre_requisites"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>