<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="13dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="52dp"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/profile"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/cardPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="6dp"
            android:autoLink="email"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/montserrat"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/cardPhoto"
            app:layout_constraintTop_toBottomOf="@id/txtName" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="6dp"
            android:autoLink="phone"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/montserrat"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/cardPhoto"
            app:layout_constraintTop_toBottomOf="@id/txtEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>